# backend/src/DTOs/CategoryDto.php
@@ -17,6 +17,9 @@ class CategoryDto
     #[OA\Property(property: "nombre", type: "string", example: "Bebidas")]
     public string $nombre;
 
+    #[OA\Property(property: "imagen_categoria", type: "string", nullable: true, example: "data:image/jpeg;base64,...")]
+    public ?string $imagen_categoria;
+
     #[OA\Property(
         property: "subcategorias",
         type: "array",
